# Snes9x-CI

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  nightly-regression.yml
docs/: INTEGRATING.md  ROMS.md  USAGE.md
docs/json_schema/: output_schema.json
include/: core_api.h  exit_codes.h
scripts/upstream/: fetch_and_build_snes9x.sh  shim_example.cpp
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  core_adapter.cpp  core_stub.cpp
tests/: CMakeLists.txt  core_smoke_test.cpp  core_trivial_test.cpp
tests/data/: dummy.sfc  script.txt  script_assert.txt  script_outputfile.txt  script_pretty.txt
tests/data/regression/: 240p_ntsc.txt  240p_pal.txt  regression_smoke.txt
tools/: check_output_file.py  ci_smoke_test.py  json_schema_validate.py  run_headless.sh
tools/regression/: run_regression.sh
